# pente-iii

./: .gitignore
engine/: Cargo.toml
engine/src/: aho_corasick.rs  board.rs  evaluation.rs  lib.rs  main.rs  patterns.toml  search.rs  tile.rs
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/evaluate/: route.ts
web/app/api/opponent-move/: route.ts
web/components/: BoardGrid.tsx
web/lib/: board.ts  engine.ts  evaluate.ts  game.ts  opponent.ts  players.ts
