[package]
name = "pente-engine"
version = "0.1.0"
edition = "2021"
description = "Pente move evaluation engine (CLI)"

[lib]
name = "pente_engine"
path = "src/lib.rs"

[[bin]]
name = "pente-engine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
